feat: Add News, Contact, and Privacy pages with backend support and UI enhancements
- Implement News system: DB models, scraper command, API endpoints, and frontend NewsPage.
- Add Contact page with ContactSubmission and IssueReport models.
- Add Privacy Policy page and Cookie Consent banner.
- Update Dashboard components (GeneticMarkers, LiveUpdates, StatCard) and layout (Header, Footer).
- Enhance Trial Finder UI and filters.
- Update project settings, requirements, and dev scripts.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,24 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ALS/FTD Research Dashboard</title>
+  
+  <!-- SEO & Social Media Meta Tags -->
+  <title>ALS/FTD Research Analytics</title>
+  <meta name="description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community. Track study phases, genetic markers, and geographic distribution." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://f-als.com/" />
+  <meta property="og:title" content="ALS/FTD Research Analytics" />
+  <meta property="og:description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
+  <meta property="og:image" content="https://f-als.com/f-als-ftd-dashboard.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://f-als.com/" />
+  <meta property="twitter:title" content="ALS/FTD Research Analytics" />
+  <meta property="twitter:description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
+  <meta property="twitter:image" content="https://f-als.com/f-als-ftd-dashboard.png" />
 </head>
 
 <body>
