--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,24 +9,32 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- SEO & Social Media Meta Tags -->
   <title>ALS/FTD Research Analytics</title>
-  <meta name="description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community. Track study phases, genetic markers, and geographic distribution." />
-  
+  <meta name="description"
+    content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community. Track study phases, genetic markers, and geographic distribution." />
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://f-als.com/" />
   <meta property="og:title" content="ALS/FTD Research Analytics" />
-  <meta property="og:description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
+  <meta property="og:description"
+    content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
   <meta property="og:image" content="https://f-als.com/f-als-ftd-dashboard.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://f-als.com/" />
   <meta property="twitter:title" content="ALS/FTD Research Analytics" />
-  <meta property="twitter:description" content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
+  <meta property="twitter:description"
+    content="Aggregating and visualizing clinical trial data for the familial ALS and FTD research community." />
   <meta property="twitter:image" content="https://f-als.com/f-als-ftd-dashboard.png" />
+
+  <!-- PDBe Molstar 3D Viewer -->
+  <link rel="stylesheet" href="https://www.ebi.ac.uk/pdbe/pdb-component-library/css/pdbe-molstar-3.1.3.css" />
+  <script type="text/javascript"
+    src="https://www.ebi.ac.uk/pdbe/pdb-component-library/js/pdbe-molstar-component-3.1.3.js"></script>
 </head>
 
 <body>
